# cppliger

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
cppliger/: CMakeLists.txt  cppliger.cpp  cppliger.h
src/Python/: CMakeLists.txt  getwheelname.py.in  setup.py.in
src/Python/pyliger/: __init__.py  extension.py
src/Python/src/: myclass_bindings.cpp
src/RPackage/: CMakeLists.txt  DESCRIPTION.in
src/RPackage/R/: rliger-package.R
src/RPackage/src/: myclass_export.cpp
src/cppliger/: CMakeLists.txt
src/cppliger/include/cppliger/: myclass.h  myfunction.h
src/cppliger/src/: myclass.cpp  myfunction.cpp
tests/Python/: CMakeLists.txt
